# Climate-Policy-Intelligence-Engine

./: .gitignore  CLAUDE.md  CPIE_Schedule.xlsx  Makefile  README.md  model_selection.md  pyproject.toml
configs/: config.yaml
data/eval/results/: model_selection_raw.json  pdf_audit.csv
notebooks/: chunker.ipynb  model_selection.ipynb  pdf_quality_audit.ipynb
scripts/: ablation_retrieval.py  build_indices.py  validate_pipeline_e2e.py  validate_retrieval.py
src/ingestion/: chunker.py  pdf_loader.py
src/retrieval/: __init__.py  bm25_retriever.py  dense_retriever.py  hybrid_retriever.py  reranker.py
src/synthesis/: __init__.py  output_schema.py  synthesiser.py
