[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cpie"
version = "0.1.0"
description = "Climate Policy Intelligence Engine — domain-aware RAG for UK and global climate policy"
requires-python = ">=3.11"
dependencies = [
    "pymupdf>=1.24.0",
    "rank-bm25>=0.2.2",
    "sentence-transformers>=3.0.0",
    "chromadb>=0.5.0",
    "anthropic>=0.30.0",
    "openai>=1.30.0",
    "streamlit>=1.35.0",
    "pydantic>=2.7.0",
    "python-dotenv>=1.0.0",
    "tiktoken>=0.7.0",
    "numpy>=1.26.0",
    "matplotlib>=3.8.0",
    "torch>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-cov>=5.0.0",
    "jupyter>=1.0.0",
    "ipykernel>=6.29.0",
    "matplotlib-inline>=0.1.7",
    "ruff>=0.4.0",
]

[tool.uv.sources]
torch = { index = "pytorch-cu124" }

[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true

[tool.hatch.build.targets.wheel]
packages = ["src/ingestion", "src/retrieval", "src/synthesis", "src/evaluation", "src/monitoring"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.pytest.ini_options]
testpaths = ["tests"]
